--- a/MoneySaver.App/Components/AddTransactionDialog.razor
+++ b/MoneySaver.App/Components/AddTransactionDialog.razor
@@ -17,23 +17,31 @@
                         <ValidationSummary />
 
                         <div class="form-group">
+                            <label for="">Transaction date: </label>
+                            <InputDate id="transactionDate" class="form-control" @bind-Value="@Transaction.TransactionDate"></InputDate>
+                            <ValidationMessage For="@(() => Transaction.TransactionDate)" />
+                        </div>
+                        <div class="form-group row">
+                            <label for="transactionCategory" class="col-sm-3">Category: </label>
+                            <InputSelect id="transactionCategory" class="form-control col-sm-8" @bind-Value="@CategoryId">
+                                @foreach (var category in TransactionCategories)
+                                    {
+                                    <option value="@category.TransactionCategoryId">@category.Name</option>
+                                    }
+                            </InputSelect>
+                        </div>
+                        <div class="form-group">
+                            <label for="">Amount: </label>
+                            <InputNumber id="amount" class="form-control" @bind-Value="@Transaction.Amount"></InputNumber>
+                            <ValidationMessage For="@(() => Transaction.Amount)" />
+                        </div>
+                        <div class="form-group">
                             <label for="">AdditionalNote: </label>
                             <InputText id="additionalNote" class="form-control" @bind-Value="@Transaction.AdditionalNote" placeholder="Enter last name"></InputText>
                             <ValidationMessage For="@(() => Transaction.AdditionalNote)" />
                         </div>
 
-                        @*<div class="form-group">
-                            <label for="firstName">First name: </label>
-                            <InputText id="firstName" class="form-control" @bind-Value="@Employee.FirstName" placeholder="Enter first name"></InputText>
-                            <ValidationMessage For="@(() => Employee.FirstName)" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="email">Email: </label>
-                            <InputText id="email" class="form-control" @bind-Value="@Employee.Email" placeholder="Enter email"></InputText>
-                            <ValidationMessage For="@(() => Employee.Email)" />
-                        </div>*@
-                        <button type="submit" class="btn btn-primary">Save employee</button>
+                        <button type="submit" class="btn btn-primary">Save transaction</button>
                         <a class="btn btn-outline-primary" @onclick="@Close">Close</a>
                     </EditForm>
 
