--- a/MoneySaver.App/Components/BudgetItemDialog.razor
+++ b/MoneySaver.App/Components/BudgetItemDialog.razor
@@ -4,43 +4,43 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="titleLabel">Add transaction</h5>
+                    <h5 class="modal-title" id="titleLabel">Add budget item</h5>
                     <button type="button" class="close" @onclick="@Close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
 
-                    <EditForm Model="@Transaction" OnValidSubmit="@HandleValidSubmit">
+                    <EditForm Model="@BudgetItemModel" OnValidSubmit="@HandleValidSubmit">
 
                         <DataAnnotationsValidator />
                         <ValidationSummary />
-                        <div class="form-group">
+                        @*<div class="form-group">
                             <label for="">Transaction date: </label>
                             <InputDate id="transactionDate" class="form-control" @bind-Value="@Transaction.TransactionDate"></InputDate>
                             <ValidationMessage For="@(() => Transaction.TransactionDate)" />
-                        </div>
-                        <div class="form-group row">
+                        </div>*@
+                        @*<div class="form-group row">
                             <label for="transactionCategory" class="col-sm-3">Category: </label>
                             <InputSelect id="transactionCategory" class="form-control col-sm-8" @bind-Value="@CategoryId">
-                                @foreach (var category in TransactionCategories)
+                                @foreach (var category in ТransactionCategories)
                                     {
                                     <option value="@category.TransactionCategoryId">@category.Name</option>
                                     }
                             </InputSelect>
-                        </div>
+                        </div>*@
                         <div class="form-group">
                             <label for="">Amount: </label>
-                            <InputNumber id="amount" class="form-control" @bind-Value="@Transaction.Amount"></InputNumber>
-                            <ValidationMessage For="@(() => Transaction.Amount)" />
+                            <InputNumber id="amount" class="form-control" @bind-Value="@BudgetItemModel.LimitAmount"></InputNumber>
+                            <ValidationMessage For="@(() => BudgetItemModel.LimitAmount)" />
                         </div>
-                        <div class="form-group">
+                        @*<div class="form-group">
                             <label for="">AdditionalNote: </label>
-                            <InputTextArea  id="additionalNote" class="form-control" @bind-Value="@Transaction.AdditionalNote" placeholder="Additional info"></InputTextArea>
+                            <InputText id="additionalNote" class="form-control" @bind-Value="@Transaction.AdditionalNote" placeholder="Enter last name"></InputText>
                             <ValidationMessage For="@(() => Transaction.AdditionalNote)" />
-                        </div>
+                        </div>*@
 
-                        <button type="submit" class="btn btn-primary">Save transaction</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
                         <a class="btn btn-outline-primary" @onclick="@Close">Close</a>
                     </EditForm>
 
@@ -49,3 +49,4 @@
         </div>
     </div>
 }
+
