--- a/MoneySaver.App/Pages/Report.razor
+++ b/MoneySaver.App/Pages/Report.razor
@@ -1,5 +1,7 @@
 ﻿@page "/report"
-
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@attribute [Authorize]
 <h3>Report</h3>
 
 <div>
