--- a/MoneySaver.App/Shared/NavMenu.razor
+++ b/MoneySaver.App/Shared/NavMenu.razor
@@ -23,6 +23,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="claims">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Claims
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="report">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Report
             </NavLink>
@@ -30,6 +35,11 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="configuration">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Configuration
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="testpage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Test
             </NavLink>
         </li>
     </ul>
