--- a/MoneySaver.App/Shared/MainLayout.razor
+++ b/MoneySaver.App/Shared/MainLayout.razor
@@ -1,8 +1,11 @@
 ﻿@inherits LayoutComponentBase
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
+    <AuthorizeView>
+        <Authorized>
+            <div class="sidebar">
+                <NavMenu />
+            </div>
+        </Authorized>
+    </AuthorizeView>
     <div class="main">
         <div class="top-row px-4 auth">
             <LoginDisplay />
