Setup category add/edit

--- a/MoneySaver.App/Pages/Budget.razor
+++ b/MoneySaver.App/Pages/Budget.razor
@@ -35,7 +35,7 @@ else
         {
             <div class="row col-md-12">
                 <div class="col-md-2">
-                    @item.TransactionCategory?.Name
+                    @item.TransactionCategory?.AlternativeName
                 </div>
                 <div class="col-md-5">
                     <div class="progress">
