--- a/MoneySaver.App/Components/TransactionDialog.razor
+++ b/MoneySaver.App/Components/TransactionDialog.razor
@@ -4,7 +4,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="titleLabel">Add transaction</h5>
+                    <h5 class="modal-title" id="titleLabel">Transaction</h5>
                     <button type="button" class="close" @onclick="@Close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -25,7 +25,7 @@
                             <InputSelect id="transactionCategory" class="form-control col-sm-8" @bind-Value="@CategoryId">
                                 @foreach (var category in TransactionCategories)
                                     {
-                                    <option value="@category.TransactionCategoryId">@category.Name</option>
+                                    <option value="@category.TransactionCategoryId">@category.AlternativeName</option>
                                     }
                             </InputSelect>
                         </div>
