--- a/MoneySaver.App/Pages/Configuration.razor
+++ b/MoneySaver.App/Pages/Configuration.razor
@@ -2,19 +2,54 @@
 @attribute [Authorize]
 @using MoneySaver.App.Models;
 <h3>Configuration</h3>
+<div class="container">
 <div class="row">
-    <div class="col-xl-6" style="margin-bottom: 16px">
+    <div class="col-xl-12" style="margin-bottom: 16px">
         <div class="row">
-            <div class="col-md-12" style="margin-bottom: 16px">
-                <RadzenTree Expand=@OnExpand Change=@OnChange Data=@categories Style="width: 100%; height: 300px">
-                    <RadzenTreeLevel TextProperty="Name" ChildrenProperty="Children">
+            @if (Categories == null)
+            {
+                <div>Loading...</div>
+            }
+            else
+            { 
+                <div class="row">
+                    <button type="button" class="btn btn-info btn-sm" @onclick="@(() => AddItem())">
+                        <i class="fas fa-plus"></i>
+                    </button>
+                </div>
+
+                <CategoryDialog @ref="CategoryDialog" CloseEventCallback="@OnDialogClose" ></CategoryDialog>
+                <div class="col-md-12" style="margin-bottom: 16px">
+                    <RadzenTree Expand=@OnExpand Change=@OnChange Data=@Categories Style="width: 100%">
+                        <RadzenTreeLevel TextProperty="Name" ChildrenProperty="Children">
+                            <Template>
+                                @((context.Value as TransactionCategory).Name)
+                                <button type="button" class="btn btn-info btn-sm" @onclick="@(() => AddItem((context.Value as TransactionCategory)))">
+                                    <i class="fas fa-plus"></i>
+                                </button>
+                                <button type="button" class="btn btn-primary btn-sm" @onclick="@(() => EditItem((context.Value as TransactionCategory)))">
+                                    <i class="fas fa-edit"></i>
+                                </button>
+                                @*<button type="button" class="btn btn-danger btn-sm" @onclick="@(() => AddItem((context.Value as TransactionCategory)))">
+                                    <i class="fas fa-trash fa-xs" @onclick="@(() => AddItem((context.Value as TransactionCategory)))"></i>
+                                </button>*@
+                            </Template>
+                        </RadzenTreeLevel>
+                        <RadzenTreeLevel TextProperty="Name" HasChildren=@(category => false) >
                         <Template>
-                            <strong>@((context.Value as TransactionCategory).Name)</strong>
+                                @((context.Value as TransactionCategory).Name)
+                                <button type="button" class="btn btn-primary btn-sm" @onclick="@(() => EditItem((context.Value as TransactionCategory)))">
+                                    <i class="fas fa-edit"></i>
+                                </button>
+                                @*<button type="button" class="btn btn-danger btn-sm" @onclick="@(() => AddItem((context.Value as TransactionCategory)))">
+                                    <i class="fas fa-trash"></i>
+                                </button>*@
                         </Template>
-                    </RadzenTreeLevel>
-                    <RadzenTreeLevel TextProperty="Name" HasChildren=@(product => false) />
-                </RadzenTree>
-            </div>
+                        </RadzenTreeLevel>
+                    </RadzenTree>
+                </div>
+            }
             </div>
         </div>
     </div>
+</div>
