Setup report page to gather results for expensess; add test line chart; some code refactoring

--- a/MoneySaver.App/Components/PieChart.razor
+++ b/MoneySaver.App/Components/PieChart.razor
@@ -1,31 +1,2 @@
-﻿@using Microsoft.JSInterop
-@inject IJSRuntime JSRuntime
-<h3>PieChart</h3>
-<figure class="highcharts-figure">
-    <div id="container"></div>
-    <p class="highcharts-description">
-        Pie chart where the individual slices can be clicked to expose more
-        detailed data.
-    </p>
-</figure>
-<button type="button" class="close" @onclick="@ReloadChart" >
-    <span>Reload chart</span>
-</button>
-@code {
-    private List<DataItem> Data = new List<DataItem>()
-    {
-       new DataItem {Name = "Chrome", Y = 62.74},
-       new DataItem {Name = "Firefox", Y = 37.26}
-    };
-
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        await JSRuntime.InvokeVoidAsync(
-            "pieChart.showChart", this.Data);
-    }
-
-    protected async Task ReloadChart()
-    {
-        await JSRuntime.InvokeVoidAsync("pieChart.showChart");
-    }
-}
+﻿<h3>@ChartName</h3>
+<div id="@ChartContainer"></div>
