--- a/MoneySaver.App/Shared/NavMenu.razor
+++ b/MoneySaver.App/Shared/NavMenu.razor
@@ -14,22 +14,22 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="transactions">
-                <span class="oi oi-plus" aria-hidden="true"></span> Transactions
+                <span class="oi oi-transfer" aria-hidden="true"></span> Transactions
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="budget">
-                <span class="oi oi-plus" aria-hidden="true"></span> Budget
+                <span class="oi oi-book" aria-hidden="true"></span> Budget
             </NavLink>
         </li>
-        <li class="nav-item px-3">
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="claims">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Claims
             </NavLink>
-        </li>
+        </li>*@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="report">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Report
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Report
             </NavLink>
         </li>
         <li class="nav-item px-3">
