Commit after big time

--- a/MoneySaver.App/App.razor
+++ b/MoneySaver.App/App.razor
@@ -12,6 +12,13 @@
                         <p>You are not authorized to access this resource.</p>
                     }
                 </NotAuthorized>
+                <Authorizing>
+                    <div class="d-flex justify-content-center">
+                        <div class="spinner-border" role="status">
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                    </div>
+                </Authorizing>
             </AuthorizeRouteView>
         </Found>
         <NotFound>
