--- a/MoneySaver.App/Pages/Authentication.razor
+++ b/MoneySaver.App/Pages/Authentication.razor
@@ -1,6 +1,16 @@
 @page "/authentication/{action}"
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-<RemoteAuthenticatorView Action="@Action" />
+<RemoteAuthenticatorView Action="@Action">
+    <LoggingIn>
+        <div class="alert alert-info" role="alert"></div>
+    </LoggingIn>
+    <CompletingLoggingIn>
+        <div class="alert alert-info" role="alert"></div>
+    </CompletingLoggingIn>
+    <LogOut>
+        <div>test</div>
+    </LogOut>
+</RemoteAuthenticatorView>
 
 @code{
     [Parameter] public string Action { get; set; }
