--- a/MoneySaver.App/Pages/Configuration.razor
+++ b/MoneySaver.App/Pages/Configuration.razor
@@ -2,54 +2,64 @@
 @attribute [Authorize]
 @using MoneySaver.App.Models;
 <h3>Configuration</h3>
-<div class="container">
 <div class="row">
-    <div class="col-xl-12" style="margin-bottom: 16px">
-        <div class="row">
-            @if (Categories == null)
-            {
-                <div>Loading...</div>
-            }
-            else
-            { 
-                <div class="row">
-                    <button type="button" class="btn btn-info btn-sm" @onclick="@(() => AddItem())">
-                        <i class="fas fa-plus"></i>
-                    </button>
+    <div class="col-xl-6" style="margin-bottom: 16px">
+        @if (Categories == null)
+        {
+            <div class="d-flex justify-content-center">
+                <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
                 </div>
+            </div>
+        }
+        else 
+        {
+            <div class="row">
+                <button type="button" class="btn btn-info" @onclick="@(() => AddItem())">
+                    <i class="fas fa-plus"></i>Add category
+                </button>
+            </div>
 
-                <CategoryDialog @ref="CategoryDialog" CloseEventCallback="@OnDialogClose" ></CategoryDialog>
-                <div class="col-md-12" style="margin-bottom: 16px">
-                    <RadzenTree Expand=@OnExpand Change=@OnChange Data=@Categories Style="width: 100%">
-                        <RadzenTreeLevel TextProperty="Name" ChildrenProperty="Children">
-                            <Template>
-                                @((context.Value as TransactionCategory).Name)
+            <CategoryDialog @ref="CategoryDialog" CloseEventCallback="@OnDialogClose"></CategoryDialog>
+            <div class="col-md-12" style="margin-bottom: 16px">
+                <RadzenTree Expand=@OnExpand Change=@OnChange Data=@Categories Style="width: 100%">
+                    <RadzenTreeLevel TextProperty="Name" ChildrenProperty="Children">
+                        <Template>
+                            <span>@((context.Value as TransactionCategory).Name)</span>
+                            <div>
                                 <button type="button" class="btn btn-info btn-sm" @onclick="@(() => AddItem((context.Value as TransactionCategory)))">
                                     <i class="fas fa-plus"></i>
                                 </button>
                                 <button type="button" class="btn btn-primary btn-sm" @onclick="@(() => EditItem((context.Value as TransactionCategory)))">
                                     <i class="fas fa-edit"></i>
                                 </button>
-                                @*<button type="button" class="btn btn-danger btn-sm" @onclick="@(() => AddItem((context.Value as TransactionCategory)))">
-                                    <i class="fas fa-trash fa-xs" @onclick="@(() => AddItem((context.Value as TransactionCategory)))"></i>
-                                </button>*@
-                            </Template>
-                        </RadzenTreeLevel>
-                        <RadzenTreeLevel TextProperty="Name" HasChildren=@(category => false) >
+                                <button type="button" class="btn btn-danger btn-sm" @onclick="@(() => DeleteItem((context.Value as TransactionCategory)))">
+                                    <i class="fas fa-trash-alt"></i>
+                                </button>
+                            </div>
+                            @*<button type="button" class="btn btn-danger btn-sm" @onclick="@(() => AddItem((context.Value as TransactionCategory)))">
+                                <i class="fas fa-trash fa-xs" @onclick="@(() => AddItem((context.Value as TransactionCategory)))"></i>
+                            </button>*@
+                        </Template>
+                    </RadzenTreeLevel>
+                    <RadzenTreeLevel TextProperty="Name" HasChildren=@(category => false)>
                         <Template>
-                                @((context.Value as TransactionCategory).Name)
+                            <span>@((context.Value as TransactionCategory).Name)</span>
+                            <div>
                                 <button type="button" class="btn btn-primary btn-sm" @onclick="@(() => EditItem((context.Value as TransactionCategory)))">
                                     <i class="fas fa-edit"></i>
                                 </button>
-                                @*<button type="button" class="btn btn-danger btn-sm" @onclick="@(() => AddItem((context.Value as TransactionCategory)))">
-                                    <i class="fas fa-trash"></i>
-                                </button>*@
+                                <button type="button" class="btn btn-danger btn-sm" @onclick="@(() => DeleteItem((context.Value as TransactionCategory)))">
+                                    <i class="fas fa-trash-alt"></i>
+                                </button>
+                            </div>
+                            @*<button type="button" class="btn btn-danger btn-sm" @onclick="@(() => AddItem((context.Value as TransactionCategory)))">
+                                <i class="fas fa-trash"></i>
+                            </button>*@
                         </Template>
-                        </RadzenTreeLevel>
-                    </RadzenTree>
-                </div>
-            }
+                    </RadzenTreeLevel>
+                </RadzenTree>
             </div>
-        </div>
+        }
     </div>
-</div>
+    </div>
