--- a/MoneySaver.App/Pages/Index.razor
+++ b/MoneySaver.App/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@attribute [Authorize]
+@*@attribute [Authorize]*@
 <h1>Hello to money saving world!</h1>
 @*<AuthorizeView>
         <Authorized>
